# gdk-math

./: .gitignore  .gitmodules  .swp  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  annotated.html  classes.html  cmake_install.cmake  dir_d074ae38dd914ed77ea4732049583e90.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxy.config  files.html  functions.html  functions_func.html  functions_vars.html  index.html  intvector2_8h_source.html  mat4x4_8h_source.html  pages.html  quaternion_8h_source.html  structgdk_1_1_int_vector2-members.html  structgdk_1_1_int_vector2.html  structgdk_1_1_mat4x4-members.html  structgdk_1_1_mat4x4.html  structgdk_1_1_quaternion-members.html  structgdk_1_1_quaternion.html  structgdk_1_1_vector2-members.html  structgdk_1_1_vector2.html  structgdk_1_1_vector3-members.html  structgdk_1_1_vector3.html  structgdk_1_1_vector4-members.html  structgdk_1_1_vector4.html  todo.html  vector2_8h_source.html  vector3_8h_source.html  vector4_8h_source.html
generatedinclude/gdkmath/: buildinfo.h
include/gdk/: intvector2.h  mat4x4.h  math_constants.h  matrix4x4.h  quaternion.h  vector2.h  vector3.h  vector4.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_3.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js
src/: intvector2.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
test/: CMakeLists.txt  intvector2_test.cpp  mat4x4_test.cpp  quaternion_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp
workspace/: build.sh
